--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "cvzone",
+        "Handtracking",
         "imencode",
         "mediapipe",
+        "nhandien",
         "protobuf",
         "tobytes",
         "yolo"
